app/assets/stylesheets/nunchaku/application.css.scss
/*
 *= require_self
 *= require jquery.ui.all
 *= require bootstrap3-editable/bootstrap-editable
 */

.ui-sortable {
  li:hover {
    cursor: -webkit-grab; cursor: -moz-grab;
  }
}

.form-inline {
  .boolean {
    margin: -2px 0 0 0 !important;
  }
}

.collection_check_boxes {
  padding: 0 1.5em 0.5em 0.5em;
}

